force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayActions__c/Apttus_Config2__ConfigCustomDisplayActions__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds information about custom actions displayed in installed product view, cart view etc</description>
    <label>Config Custom Display Actions</label>
</CustomObject>