force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayActions__c/fields/Apttus_Config2__ActionArea__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ActionArea__c</fullName>
    <description>Indicates whether the action is displayed on left, right, center section of the action bar. The value more indicates it is displayed under more button.</description>
    <inlineHelpText>Select left, right, center or more as the action display area</inlineHelpText>
    <label>Action Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>