force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayActions__c/fields/Apttus_Config2__ActionLabelName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ActionLabelName__c</fullName>
    <description>The name of the custom label for the action.</description>
    <inlineHelpText>The name of the custom label for the action.</inlineHelpText>
    <label>Action Label Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>