force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayActions__c/fields/Apttus_Config2__ActionName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ActionName__c</fullName>
    <description>Enter the API name for the action.</description>
    <inlineHelpText>Enter the API name for the action.</inlineHelpText>
    <label>Action Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>