force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayActions__c/fields/Apttus_Config2__ActionPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ActionPage__c</fullName>
    <description>The name of the custom action page. A custom action may implemented either as a Visualforce page or as a custom class</description>
    <inlineHelpText>The name of the custom action page. A custom action may implemented either as a Visualforce page or as a custom class</inlineHelpText>
    <label>Action Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>