force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayActions__c/fields/Apttus_Config2__ActionParams__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ActionParams__c</fullName>
    <description>The url parameters for the action. Multiple parameters may be passed by using the ampersand character to separate each parameter. Each parameter is expressed in the form param-name=param-value. For e.g. templateName=XYZ&amp;draft=true</description>
    <inlineHelpText>The url parameters for the action. Multiple parameters may be passed by using the ampersand character to separate each parameter. Each parameter is expressed in the form param-name=param-value. For e.g. templateName=XYZ&amp;draft=true</inlineHelpText>
    <label>Action Params</label>
    <length>255</length>
    <type>Text</type>
</CustomField>