force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayActions__c/fields/Apttus_Config2__ActionStyleClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ActionStyleClass__c</fullName>
    <description>Indicates style class used  for the action.</description>
    <inlineHelpText>Enter style class name for the action.</inlineHelpText>
    <label>Action Style Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>