force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayActions__c/fields/Apttus_Config2__ActionType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ActionType__c</fullName>
    <description>The action type</description>
    <inlineHelpText>The action type</inlineHelpText>
    <label>Action Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>