force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayActions__c/fields/Apttus_Config2__AlwaysDisplay__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AlwaysDisplay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the action should be displayed even when it is not enabled</description>
    <inlineHelpText>Check this to display the action as disabled(grayed out)  even when it is not enabled.</inlineHelpText>
    <label>Always Display</label>
    <type>Checkbox</type>
</CustomField>