force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayActions__c/fields/Apttus_Config2__Behavior__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Behavior__c</fullName>
    <description>The behavior the open page action takes.</description>
    <inlineHelpText>The behavior the open page action takes.</inlineHelpText>
    <label>Behavior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>