force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayActions__c/fields/Apttus_Config2__DisplayAs__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DisplayAs__c</fullName>
    <description>Indicates whether the action is displayed as action or task or both</description>
    <inlineHelpText>Enter action or task or both to display the action on a page as action button or task.</inlineHelpText>
    <label>Display As</label>
    <length>255</length>
    <type>Text</type>
</CustomField>