force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayActions__c/fields/Apttus_Config2__DisplayType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DisplayType__c</fullName>
    <description>The action display type 

Valid values are the following 

Cart Line Item 
Asset Line Item</description>
    <inlineHelpText>The action display type 

Valid values are the following 

Cart Line Item 
Asset Line Item</inlineHelpText>
    <label>Display Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>