force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayActions__c/fields/Apttus_Config2__Flow__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Flow__c</fullName>
    <description>The flow associated with the action</description>
    <inlineHelpText>The flow associated with the action</inlineHelpText>
    <label>Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>