force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayActions__c/fields/Apttus_Config2__IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the action is enabled for the display</description>
    <inlineHelpText>Indicates whether the action is enabled for the display</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>