force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayActions__c/listViews/ALl.listView-meta.xml
<ListView>
    <fullName>ALl</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Config2__Flow__c</columns>
    <columns>Apttus_Config2__Behavior__c</columns>
    <columns>Apttus_Config2__DisplayAs__c</columns>
    <columns>Apttus_Config2__DisplayType__c</columns>
    <columns>Apttus_Config2__IsEnabled__c</columns>
    <columns>Apttus_Config2__ActionType__c</columns>
    <columns>Apttus_Config2__AlwaysDisplay__c</columns>
    <columns>Apttus_Config2__Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALl</label>
</ListView>